--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap');
 
 * {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	font-family: 'Press Start 2P', sans-serif;
+	font-family: 'Kalam', sans-serif;
 	user-select: none;
 	transition: all 0.25s;
-	overflow: hidden;
 }
 
 ::-webkit-scrollbar {
 	display: none;
 }
 
+::placeholder {
+	color: #ffffff87;
+}
+
 html {
 	height: 100vh;
 	width: 100vw;
+	overflow: hidden;
 }
 
 body {
@@ -45,12 +49,17 @@ body.landscape {
 	top: 10px;
 }
 
+.d-pad {
+	display: none;
+}
+
 .d-pad.touch {
 	padding: 85px;
 	border-radius: 100%;
 	background: #d6d7d761;
 	margin: 20px 0px;
 	position: relative;
+	display: block;
 }
 
 .d-pad.touch span {
@@ -123,6 +132,124 @@ body.landscape {
 	100% {
 		top: 0vh;
 	}
+}
+
+.title {
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #00000061;
+}
+
+.title form {
+	padding: 64px 56px;
+	background: #1e88e5;
+	border-radius: 45px;
+	position: relative;
+}
+
+.start-btn {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 12px 8px;
+	background: #e53935;
+	border-radius: 10px;
+	border: 2px solid white;
+	cursor: pointer;
+	font-size: 16px;
+	outline: 0;
+}
+
+.start-btn:focus {
+	outline: 0;
+}
+
+.start-btn:hover {
+	color: #fff0f0;
+	transform: translateX(-50%) scale(0.95);
+}
+
+.start-btn:active {
+	transform: translateX(-50%) scale(1);
+}
+
+.form-control {
+	position: relative;
+	margin: 0 0 40px;
+	width: 300px;
+}
+
+.form-control input {
+	background: transparent;
+	border: 0;
+	border-bottom: 2px white solid;
+	display: block;
+	width: 100%;
+	padding: 15px 0;
+	font-size: 18px;
+	color: white;
+	position: relative;
+	z-index: 100;
+}
+
+.form-control input:focus,
+.form-control input:valid {
+	outline: none;
+}
+
+.form-control label {
+	position: absolute;
+	top: 15px;
+	left: 0;
+}
+
+.form-control label span {
+	display: inline-block;
+	font-size: 18px;
+	min-width: 5px;
+	transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form-control input:focus+label span,
+.form-control input:valid+label span {
+	color: lightblue;
+	transform: translateY(-30px);
+}
+
+.form-control .underline {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 2px;
+	width: 0%;
+	background: #89daf4;
+}
+
+.form-control input:focus+span,
+.form-control input:valid+span {
+	width: 100%;
+}
+
+.form-control.time {
+	display: inline-block;
+	width: 35px;
+	text-align: center;
+}
+
+#time-label {
+	font-size: 20px;
+	position: relative;
+	top: 7px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 @media screen and (max-width: 400px) {
